# libxr

./: .clang-format  .clangd  .cmake-format.yaml  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  Doxyfile  PR99_REVIEW_CHECKLIST.md  README.md  README.zh-CN.md  cmake_install.cmake  libxr.hpp  libxr_def.hpp  main.cpp  test.cpp
CMake/: config.cmake  (+3 more)
driver/Linux/: CMakeLists.txt  linux_flash.hpp  linux_gpio.cpp  linux_gpio.hpp  linux_i2c.cpp  linux_i2c.hpp  linux_power.hpp  linux_timebase.hpp  linux_uart.hpp  linux_wifi_client.hpp
test/: CMakeLists.txt  bench_linux_shared_topic.cpp  bench_linux_system_sync.cpp  format_kernel_smoke.cpp  format_stdio_smoke.cpp  format_stream_smoke.cpp  test.cpp  test.hpp  test_app_framework.cpp  test_async.cpp  test_cb.cpp  test_condition_var.cpp  test_crc.cpp  test_cycle_value.cpp  test_database.cpp  test_double_buffer.cpp  test_encoder.cpp  test_event.cpp  test_inertia.cpp  test_kinematic.cpp  test_libxr_type.cpp  test_linux_shm_topic.cpp  test_list.cpp  test_mem.cpp  test_message.cpp  test_mpmc_queue.cpp  test_mutex.cpp  test_object_pool.cpp  test_pid.cpp  test_pipe.cpp  test_pool.cpp  test_print.cpp  test_queue.cpp  test_ramfs.cpp  test_rbt.cpp  test_rs485.cpp  test_rw.cpp  test_rw_pipe.cpp  test_semaphore.cpp  test_signal.cpp  (+11 more)
test/base/: test_assert.cpp  test_color.cpp  test_def.cpp  test_mem.cpp  test_time.cpp  test_type.cpp
test/base/callback/: cb_test_common.hpp  test_cb.cpp  test_cb_direct.cpp  test_cb_guarded.cpp
test/base/core/: test_assert.cpp  test_cb.cpp  test_color.cpp  test_def.cpp  test_libxr_type.cpp  test_mem.cpp  test_print.cpp  test_rw_pipe.cpp  test_string.cpp  test_string_format.cpp  test_time.cpp
test/base/driver/: test_uart_circular_dma_rx_model.cpp  test_uart_dma_abort_join.cpp  test_uart_dma_tx_model.cpp  test_uart_dma_tx_model_boundaries.cpp  test_uart_dma_tx_model_concurrency.cpp  test_uart_dma_tx_model_operations.cpp  test_uart_dma_tx_model_state.cpp  test_uart_hardware_gate.cpp  test_uart_irq_config_gate.cpp  test_uart_rx_config_gate.cpp  uart_dma_tx_model_test_support.hpp
test/base/middleware/: message_test_payloads.hpp  test_app_framework_application.cpp  test_app_framework_hardware.cpp  test_database.cpp  test_logger.cpp  test_message_packet.cpp  test_message_topic.cpp  test_terminal_command.cpp  test_terminal_display.cpp  test_terminal_input.cpp
test/base/print/: print_compare_test_common.hpp  print_literal_test_common.hpp  print_sink_test_common.hpp  print_test_common.hpp  test_format_frontend.cpp  test_print.cpp  test_print_api.cpp  test_print_failure.cpp  test_printf_frontend.cpp  test_printf_frontend_float.cpp  test_printf_frontend_integer.cpp  test_printf_frontend_text.cpp
test/base/rw/: rw_test_common.hpp  test_pipe_basic.cpp  test_pipe_stream.cpp  test_pipe_stress.cpp  test_rw_block.cpp  test_rw_block_stream.cpp  test_rw_block_timeout.cpp  test_rw_block_waiter.cpp  test_rw_fail_clear.cpp  test_rw_fail_clear_async.cpp  test_rw_fail_clear_block.cpp  test_rw_fail_clear_stream.cpp  test_rw_pending.cpp  test_rw_pipe.cpp  test_rw_read_queue.cpp  test_rw_read_queue_clear.cpp  test_rw_read_queue_pending.cpp
test/base/string/: string_test_common.hpp  test_string.cpp  test_string_errors.cpp  test_string_format.cpp  test_string_text.cpp
test/base/structure/: test_double_buffer.cpp  test_latest_snapshot.cpp  test_list.cpp  test_lockfree_list.cpp  test_lockfree_queue.cpp  test_mpmc_queue.cpp  test_object_pool.cpp  test_pool.cpp  test_queue.cpp  test_rbt.cpp  test_spsc_queue.cpp  test_stack.cpp
test/dap_config/: test_daplink_v1_profile_jtag.cpp  test_daplink_v1_profile_swd.cpp  test_daplink_v2_profile_jtag.cpp  test_daplink_v2_profile_swd.cpp
test/framework/: binding_main.cpp  main.cpp  test.hpp  test_base.hpp  test_bench_registry.hpp  test_bench_sets.hpp  test_binding_registry.hpp  test_binding_sets.hpp  test_case_runner.hpp  test_group_registry.hpp  test_main_registry.hpp  test_main_sets.hpp  test_matrix.hpp  test_matrix_tool.cpp  test_runtime_set.hpp  test_verify_registry.hpp  test_verify_sets.hpp
test/harness/: binding_main.cpp  main.cpp  test_base.hpp  test_binding.hpp  test_case_runner.hpp  test_group_registry.hpp  test_matrix.hpp  test_matrix_tool.cpp
test/hpm_gpio_irq_shared/: CMakeLists.txt  test_hpm_gpio_irq_shared.cpp
test/hpm_i2c_stub/: CMakeLists.txt  stub_system.cpp  test_hpm_i2c_stub.cpp
test/linux_bench/: bench_latency.cpp  bench_modes.cpp  bench_overload.cpp  bench_standard.cpp  linux_shared_topic_bench_common.hpp  linux_shared_topic_bench_io_common.hpp  linux_shared_topic_bench_stats_common.hpp  linux_shared_topic_latency_bench_runner.hpp  linux_shared_topic_mode_bench_runner.hpp  linux_shared_topic_mode_child_common.hpp  linux_shared_topic_overload_bench_runner.hpp  linux_shared_topic_overload_child_common.hpp  linux_shared_topic_standard_bench_runner.hpp
test/linux_database/: linux_database_flash_test_common.hpp  linux_database_image_test_common.hpp  linux_database_reopen_test_common.hpp  linux_database_test_common.hpp  raw_database_test_groups.hpp  test_database_raw_failures.cpp  test_database_raw_recovery.cpp  test_database_raw_smoke.cpp  test_database_sequential_failures.cpp  test_database_sequential_smoke.cpp  test_linux_database_raw.cpp  test_linux_database_sequential.cpp
test/linux_shm/: linux_shm_topic_test_common.hpp  test_attach_queue.cpp  test_balance_rr.cpp  test_balance_rr_dead.cpp  test_balance_rr_rotate.cpp  test_balance_rr_skip.cpp  test_cross_process.cpp  test_lifecycle.cpp  test_lifecycle_dead_sub.cpp  test_lifecycle_slot_ref.cpp  test_lifecycle_takeover.cpp  test_linux_shm_topic.cpp  test_mixed_modes.cpp
test/linux_stdio/: linux_stdio_print_test_common.hpp  test_linux_stdio_print.cpp  test_stdio_truncation.cpp  test_stdio_wrappers.cpp
test/print_config/: print_config_probe.hpp  print_config_reset.hpp  test_float_disabled.cpp  test_float_fixed_only.cpp  test_float_precision_limit.cpp  test_integer_base_disabled.cpp  test_integer_text_disabled.cpp  test_pointer_64bit_disabled.cpp  test_syntax_switches_disabled.cpp
test/verify/: CMakeLists.txt
(+911 files in other folders)
