if(NOT _xr_system STREQUAL "linux")
  message(FATAL_ERROR "The current test tree only supports LIBXR_SYSTEM=linux.")
endif()

add_compile_options(-g)

file(GLOB_RECURSE XR_TEST_BASE_SOURCES CONFIGURE_DEPENDS
     "${CMAKE_CURRENT_SOURCE_DIR}/base/*.cpp")
list(SORT XR_TEST_BASE_SOURCES)

file(GLOB_RECURSE XR_TEST_RUNTIME_SOURCES CONFIGURE_DEPENDS
     "${CMAKE_CURRENT_SOURCE_DIR}/runtime/*.cpp")
list(SORT XR_TEST_RUNTIME_SOURCES)

file(GLOB_RECURSE XR_TEST_BINDING_CASE_SOURCES CONFIGURE_DEPENDS
     "${CMAKE_CURRENT_SOURCE_DIR}/binding/*.cpp")
list(SORT XR_TEST_BINDING_CASE_SOURCES)
list(FILTER XR_TEST_BINDING_CASE_SOURCES EXCLUDE REGEX "/binding_main\\.cpp$")

file(GLOB_RECURSE XR_TEST_VERIFY_CASE_SOURCES CONFIGURE_DEPENDS
     "${CMAKE_CURRENT_SOURCE_DIR}/verify/**/*.cpp")
list(SORT XR_TEST_VERIFY_CASE_SOURCES)
list(FILTER XR_TEST_VERIFY_CASE_SOURCES EXCLUDE REGEX "/main\\.cpp$")

file(GLOB_RECURSE XR_TEST_MEASURE_CASE_SOURCES CONFIGURE_DEPENDS
     "${CMAKE_CURRENT_SOURCE_DIR}/measure/**/*.cpp")
list(SORT XR_TEST_MEASURE_CASE_SOURCES)
list(FILTER XR_TEST_MEASURE_CASE_SOURCES EXCLUDE REGEX "/bench_linux_shared_topic\\.cpp$")

set(XR_TEST_HARNESS_SOURCES
    "${CMAKE_CURRENT_SOURCE_DIR}/framework/main.cpp")

add_executable(test
  ${XR_TEST_HARNESS_SOURCES}
  ${XR_TEST_BASE_SOURCES}
  ${XR_TEST_RUNTIME_SOURCES}
  ${XR_TEST_BINDING_CASE_SOURCES}
  ${XR_TEST_VERIFY_CASE_SOURCES}
  ${XR_TEST_MEASURE_CASE_SOURCES})
add_dependencies(test xr)

target_link_libraries(test PUBLIC xr)

target_include_directories(
  test
  PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/framework"
  PUBLIC $<TARGET_PROPERTY:xr,INTERFACE_INCLUDE_DIRECTORIES>
  PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../lib/Eigen)
